# src/model/database.js
@@ -15,10 +15,10 @@ const UserSchema = new mongoose.Schema({
     type: String,
     required: true
   },
-  password: {
-    type: String,
-    required: true
-  },
+  // password: {
+  //   type: String,
+  //   required: true
+  // },
   address: {
     type: String,
     required: true
